ii/kanboard/kanboard.yaml


# Deployment

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: kanboard
  name: kanboard
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanboard
  template:
    metadata:
      labels:
        app: kanboard
    spec:
      containers:
      - image: kanboard/kanboard:latest
        name: kanboard
        containerPorts:
          - port: 80
