ii/kanboard/kanboard-service.yaml


# Service

apiVersion: v1
kind: Service
metadata:
  labels:
    app: kanboard
  name: kanboard
  namespace: kanban-ii-coop
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: kanboard
