ii/kanboard/kanboard-ingress.yaml


# Ingress

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kanboard
  namespace: kanban-ii-coop
spec:
  rules:
  - host: kanban.ii.coop
    http:
      paths:
      - backend:
          service:
            name: kanboard
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kanban.ii.coop
    secretName: letsencrypt-prod
